--- a/manager.html
+++ b/manager.html
@@ -4,291 +4,7 @@
     <meta charset="UTF-8">
     <title>GitHub 仓库管理器</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <style>
-        html, body { height: 100%; }
-        body {
-            font-family: "Segoe UI", "Helvetica Neue", Arial, "Liberation Sans", sans-serif;
-            background: #f6f8fa;
-            margin: 0;
-            min-height: 100vh;
-        }
-        .gh-header {
-            background: #24292e;
-            color: #fff;
-            padding: 16px 32px;
-            font-size: 1.5em;
-            letter-spacing: 1px;
-            display: flex;
-            align-items: center;
-        }
-        .gh-header img { width: 32px; margin-right: 10px; }
-        .container {
-            max-width: 900px;
-            background: #fff;
-            margin: 0 auto;
-            box-shadow: 0 2px 8px #d0d7de44;
-            border-radius: 8px;
-            padding: 32px 32px 24px 32px;
-            min-height: 60vh;
-        }
-        .gh-top-actions {
-            margin-bottom: 18px;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 8px;
-        }
-        .gh-top-actions button, .gh-top-actions input {
-            margin-bottom: 8px;
-        }
-        .gh-path {
-            font-size: 1.1em;
-            color: #57606a;
-            margin-bottom: 20px;
-            word-break: break-all;
-        }
-        .gh-table {
-            width: 100%;
-            border-collapse: collapse;
-            background: #fff;
-        }
-        .gh-table th, .gh-table td {
-            padding: 10px 8px;
-            border-bottom: 1px solid #eaecef;
-            text-align: left;
-            font-size: 1em;
-        }
-        .gh-table th { background: #f6f8fa; color: #24292e; }
-        .gh-table td a { color: #0969da; text-decoration: none; cursor: pointer;}
-        .gh-table td a:hover { text-decoration: underline; }
-        button {
-            background: #238636;
-            color: #fff;
-            border: none;
-            padding: 6px 16px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1em;
-        }
-        .del-btn { background: #cf222e; }
-        .save-btn { background: #0969da; }
-        button:disabled {
-            opacity: 0.6;
-            cursor: not-allowed;
-        }
-        input[type="text"] {
-            padding: 6px 12px;
-            border: 1px solid #d0d7de;
-            border-radius: 5px;
-            font-size: 1em;
-        }
-        .gh-status {
-            margin-top: 14px;
-            color: #238636;
-            font-size: 1em;
-            min-height: 1.3em;
-        }
-        .gh-fullscreen-bg {
-            position: fixed;
-            top:0; left:0; right:0; bottom:0;
-            background: rgba(36,41,46,0.55);
-            z-index: 9999;
-            display: none;
-            align-items: stretch;
-            justify-content: stretch;
-            width: 100vw;
-            height: 100vh;
-        }
-        .gh-fullscreen {
-            width: 100vw !important;
-            height: 100vh !important;
-            max-width: 100vw !important;
-            max-height: 100vh !important;
-            margin: 0 !important;
-            border-radius: 0 !important;
-            padding: 20px !important;
-            box-sizing: border-box !important;
-            background: #fff;
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            overflow: auto;
-        }
-                .gh-fullscreen-close {
-            position: absolute;
-            right: 26px;
-            top: 18px;
-            font-size: 2.4em;
-            color: #24292e;
-            background: none;
-            border: none;
-            cursor: pointer;
-            z-index: 2;
-        }
-        .gh-fullscreen img, .gh-fullscreen video {
-            max-width: 92%;
-            max-height: 74vh;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px #d0d7de33;
-            display: block;
-            margin: 12px auto;
-        }
-        .gh-fullscreen-filename {
-            font-size: 1.12em;
-            color: #57606a;
-            margin-bottom: 16px;
-            font-weight: bold;
-            word-break: break-all;
-        }
-        .gh-fullscreen-content {
-            width: 98% !important;
-            height: calc(100vh - 160px) !important;
-            margin: 10px auto !important;
-            font-family: monospace !important;
-            line-height: 1.5 !important;
-            font-size: 14px;
-            border: 1px solid #eaecef;
-            border-radius: 6px;
-            padding: 20px;
-            box-sizing: border-box;
-            resize: vertical;
-            background: #f6f8fa;
-        }
-        .gh-fullscreen-actions {
-            width: 100%;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            margin-bottom: 18px;
-        }
-        .gh-fullscreen a {
-            font-size: 1.1em;
-            color: #0969da;
-            word-break: break-all;
-        }
-        .gh-rename-bg {
-            position: fixed;
-            top:0; left:0; right:0; bottom:0;
-            background: rgba(36,41,46,0.25);
-            z-index: 10000;
-            display: none;
-            align-items: center;
-            justify-content: center;
-        }
-        .gh-rename-modal {
-            background: #fff;
-            box-shadow: 0 4px 32px #24292e66;
-            border-radius: 11px;
-            min-width: 240px;
-            max-width: 90vw;
-            min-height: 58px;
-            padding: 28px 28px 18px 28px;
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .gh-rename-close {
-            position: absolute;
-            right: 16px;
-            top: 14px;
-            font-size: 1.8em;
-            color: #24292e;
-            background: none;
-            border: none;
-            cursor: pointer;
-        }
-        .gh-rename-title {
-            font-size: 1.08em;
-            font-weight: bold;
-            margin-bottom: 12px;
-            color: #57606a;
-        }
-        .gh-rename-input {
-            width: 200px;
-            margin-bottom: 16px;
-            padding: 6px;
-            font-size: 1em;
-            border: 1px solid #eaecef;
-            border-radius: 5px;
-        }
-        .gh-repo-list {
-            width: 100%;
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-        .gh-repo-list ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-        .gh-repo-list li {
-            padding: 12px 0;
-            border-bottom: 1px solid #eaecef;
-        }
-        .gh-repo-list li:last-child {
-            border-bottom: none;
-        }
-        .gh-repo-list .repo-name {
-            font-size: 1.2em;
-            font-weight: bold;
-            color: #0969da;
-            text-decoration: none;
-        }
-        .gh-repo-list .repo-desc {
-            color: #57606a;
-            margin: 4px 0;
-        }
-        .gh-repo-create {
-            margin-top: 24px;
-            padding-top: 20px;
-            border-top: 1px solid #eaecef;
-            text-align: center;
-        }
-        .gh-repo-actions {
-            margin-top: 20px;
-            padding-top: 20px;
-            border-top: 1px solid #eaecef;
-        }
-        .gh-repo-actions button {
-            margin: 5px;
-        }
-        .gh-settings-modal {
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 32px #24292e66;
-            max-width: 600px;
-            width: 90%;
-            max-height: 80vh;
-            overflow-y: auto;
-        }
-        .gh-settings-section {
-            margin-bottom: 20px;
-            padding-bottom: 20px;
-            border-bottom: 1px solid #eaecef;
-        }
-        .gh-settings-section:last-child {
-            border-bottom: none;
-        }
-        .gh-settings-title {
-            font-size: 1.2em;
-            font-weight: bold;
-            margin-bottom: 10px;
-            color: #24292e;
-        }
-        @media (max-width: 600px) {
-            .container { padding: 10px !important; }
-            .gh-header { padding: 10px; font-size: 1.15em; }
-            .gh-fullscreen { padding: 2vw; border-radius: 0; }
-            .gh-fullscreen img, .gh-fullscreen video { max-width: 98%; }
-            .gh-fullscreen-content { min-height: 100px; }
-            .gh-rename-modal { padding: 10vw 3vw; }
-            .gh-fullscreen-actions { flex-direction: column; align-items: flex-start;}
-            .gh-repo-list { padding: 0 10px; }
-        }
-    </style>
+    <link rel="stylesheet" href="manager.css">
 </head>
 <body>
     <div class="gh-header">
