--- a/manager.html
+++ b/manager.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>GitHub 仓库管理器</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="manager.css">
+    <link rel="stylesheet" href="abcdd12344.github.io/manager.css">
 </head>
 <body>
     <div class="gh-header">
@@ -75,6 +75,7 @@
             </div>
         </div>
     </div>
- <script src="manager.js"></script>
+ <script src="abcdd12344.github.io/manager.js"></script>
 </body>
 </html>
+
