--- a/manager.html
+++ b/manager.html
@@ -5,6 +5,7 @@
     <title>GitHub 仓库管理器</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="manager.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 </head>
 <body>
     <div class="gh-header">
@@ -78,5 +79,3 @@
 <script src="manager.js"></script>
 </body>
 </html>
-
-
