--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <a href="https://abcdd12344.github.io/note.html">note</a>
     <a href="https://abcdd12344.github.io/404.html">404</a>
     <a href="https://abcdd12344.github.io/manager.html">manager</a>
+    <a href="https://abcdd12344.github.io/manager_n.html">manager_n</a>
     <a href="https://abcdd12344.github.io/mc-resourcepack-viewer.html">mcresv</a>
   </div>
 </body>
