--- a/manager_n.html
+++ b/manager_n.html
@@ -260,6 +260,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     
     <!-- Main Script -->
-    <script type="module" src="manager.js"></script>
+    <script type="module" src="manager_n.js"></script>
 </body>
 </html>
